# gudrive

./: README.md  docker-compose.yaml
backend/: .env.example  .gitignore  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 082889ccb4eb_add_preview_status_in_node_table.py  276d5b3cb07f_increase_performance_by_removing_.py  3d9dbddd348f_initial_migration.py  46ae97f6a68a_add_vector_search_field_to_node_table.py  770ed4d3da5e_create_starred_node_table.py  88af978a3489_add_preview_url_in_node_table.py  f9938dfac765_add_trigram_index_for_node_name.py  fd8efdb90122_create_upload_sessions_table.py
backend/app/: database.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: auth.py  nodes.py  stats.py  tasks.py  uploads.py
backend/app/common/: error_handlers.py  exceptions.py
backend/app/core/: async_runner.py  auth.py  celery.py  config.py  redis.py
backend/app/lib/: copy_node_recursive.py  generate_unique_filename.py  success_response.py  utils.py
backend/app/middlewares/: cors.py
backend/app/models/: __init__.py  mixins.py  node.py  starred_node.py  upload_session.py  user.py
backend/app/schemas/: node.py  response.py  statistics.py  upload.py  user.py
backend/app/services/: auth.py  cache.py  file_preview.py  node.py  node_query.py  rate_limiter.py  stat.py  upload.py
backend/app/services/file_processor/: base.py  document_processor.py  image_processor.py  pdf_processor.py  registry.py  video_processor.py
backend/app/tasks/: uploads.py
backend/app/utils/: is_descendant.py
web/: .env.example  .gitignore  (+4 more)
(+130 files in other folders)
